# burrowstock

./: .gitignore  README.md  package.json
.cargo/: config.toml
src/: app.css  app.js  index.html  tauri-bridge.js  ~
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  vision.rs
